xml join working test included